fix messages z-index

--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -8,6 +8,8 @@
   min-width: 15rem;
   max-width: 50%;
   opacity: 0.9;
+
+  z-index: 20;
 }
 
 .messages-list {
